route-tables.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Route Tables Module

Parameters:
  VPCId:
    Type: String
    Description: VPC ID
  PublicSubnetId:
    Type: String
    Description: Public Subnet ID
  PrivateSubnetId:
    Type: String
    Description: Private Subnet ID
  InternetGatewayId:
    Type: String
    Description: Internet Gateway ID
  NatGatewayId:
    Type: String
    Description: NAT Gateway ID

Resources:
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCId
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCId
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayId

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayId

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetId
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetId
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  PublicRouteTableId:
    Description: Public Route Table ID
    Value: !Ref PublicRouteTable
  PrivateRouteTableId:
    Description: Private Route Table ID
    Value: !Ref PrivateRouteTable
